--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
          <url>http://localhost:8081/nexus/content/repositories/releases/</url>
       </repository>
 </distributionManagement>
-
+why this
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
